# pot-scraper

./: .gitignore  README.md  netlify.toml  pyproject.toml
functions/api/: cook.js  kitchen.js  modernize.js
netlify/functions/: cook.js  kitchen.js  modernize.js
pot_scraper/: __init__.py  cli.py  config.py  cuisine.py  mealdb.py  modernize.py  pantry.py  parse.py  score.py  sources.py  spoonacular.py  store.py
scripts/: build_french_laundry.py  build_laundromat.py  build_pot_legends.py  export_web.py
web/: app.js  index.html  styles.css
web/data/: french-laundromat.json  french-laundry.json  pot-legends.json  recipes.json
