[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pot-scraper"
version = "0.1.0"
description = "Pull cookable recipes out of public-domain cookbooks, scored for a Charleston grocery run."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "khobster" }]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
# On-demand AI recipe modernization.
ai = [
    "anthropic>=0.40",
    "pydantic>=2",
]

[project.scripts]
pot-scraper = "pot_scraper.cli:main"

[tool.setuptools.packages.find]
include = ["pot_scraper*"]
